# SEM

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  algebra.cpp  debug_helper.cpp  export2vtk.cpp  fc.cpp  fem.cpp  gll.cpp  main.cpp  parametric_hex.cpp  solver.cpp
src/include/: algebra.h  base64.h  debug_helper.h  dynamic_loads.h  export2vtk.h  fc.h  fem.h  gll.h  num_types.h  parametric_hex.h  solver.h
